--- a/react/projects/portfolio/portfolio/package.json
+++ b/react/projects/portfolio/portfolio/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-mailto": "^0.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
@@ -15,7 +15,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "npm run build && mv build/index.html build/200.html && surge build"
-},
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
