--- a/projects/recipe-app-final-project/package.json
+++ b/projects/recipe-app-final-project/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "engines": {
+    "node": "12.13.0"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "firebase": "^7.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
