--- a/projects/seinfeld-project-version-3/package.json
+++ b/projects/seinfeld-project-version-3/package.json
@@ -9,6 +9,7 @@
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
+    "react-scroll-to": "^3.0.0-beta.4",
     "react-youtube": "^7.9.0"
   },
   "scripts": {
